--- a/css/sobre.css
+++ b/css/sobre.css
@@ -30,7 +30,30 @@ figure{
 	margin: 30px;
 }
 
+#familia-pelho{
+	float: right;
+	margin: 0 0 10px 10px;
+}
+
+#centro-distribuicao{
+	margin-left: auto;
+	margin-right: auto;
+	width: 550px;
+}
+
 figcaption{
 	font-style: italic;
 	margin-top: 10px;
+}
+
+#rodape{
+	color: #777;
+	margin: 30px 0;
+	padding: 30px 0;
+}
+
+#rodape img{
+	margin-right: 30px;
+	vertical-align: middle;
+	width: 94px;
 }
