--- a/_css/fotos.css
+++ b/_css/fotos.css
@@ -35,26 +35,26 @@ ul#abum-fotos li:hover span{
 }
 
 ul#album-fotos li#foto01{
-    background: url("/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/galeria-01.jpg") no-repeat;
+    background: url("C:/mirrorfashion/_imagens/galeria-01.jpg") no-repeat;
 }
 
 ul#album-fotos li#foto02{
-    background: url("/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/galeria-02.jpg") no-repeat;
+    background: url("C:/mirrorfashion/_imagens/galeria-02.jpg") no-repeat;
 }
 
 ul#album-fotos li#foto03{
-    background: url("/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/galeria-03.jpg") no-repeat;
+    background: url("C:/mirrorfashion/_imagens/galeria-03.jpg") no-repeat;
 }
 
 
 ul#album-fotos li#foto04{
-    background: url("/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/galeria-04.jpg") no-repeat;
+    background: url("C:/mirrorfashion/_imagens/galeria-04.jpg") no-repeat;
 }
 
 ul#album-fotos li#foto05{
-    background: url("/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/galeria-05.jpg") no-repeat;
+    background: url("C:/mirrorfashion/_imagens/galeria-05.jpg") no-repeat;
 }
 
 ul#album-fotos li#foto06{
-    background: url("/home/raphaelgama/projeto-glass-html5/projeto-glass-html5/_imagens/galeria-06.jpg") no-repeat;
+    background: url("C:/mirrorfashion/_imagens/galeria-06.jpg") no-repeat;
 }
